Thoth History
================================================================================

Version 0.2.0 (?)
  * Updated to work with bleeding-edge Ramaze (currently 0.3.9.5 in the Ramaze
    Darcs repo).
  * Views are now compiled by default in production mode, which improves
    performance significantly. To disable view compilation, set
    server.compile_views to false.
  * Added server.enable_minify setting. When enabled, all CSS under /css and all
    JavaScript under /js will be minified on the fly.
  * Fixed incorrect default paths for the theme.public, theme.view, and media
    config settings.

Version 0.1.4 (2008-04-15)
  * Fixed a nasty bug introduced in 0.1.3 that caused a memory leak and resulted
    in the index page (/) not being cached properly.

Version 0.1.3 (2008-04-13)
  * When creating or editing a blog post or page, the preview is displayed above
    the edit form rather than below it.
  * Spaces in blog post URLs are replaced with - rather than _ (this change will
    only affect new posts; existing post URLs will not be changed).
  * Blog posts provide Atom feeds for recent comments.
  * Tag pages provide Atom feeds for posts with that tag.
  * Blog posts are marked up using the hAtom microformat.
  * Thoth auto-generates an XML sitemap at http://yourblog.com/sitemap (set
    site.enable_sitemap to false to disable).
  * Comment URLs are built using the name of the post the comment is attached to
    rather than the id.
  * Fixed a bug that prevented Atom and RSS feeds from being cached when
    server-side caching was enabled.
  * Fixed entry titles in Atom feeds claiming to be type="html" when in fact
    they weren't.
  * Fixed a bug that sometimes caused flash messages to be cached with the
    output of an action and re-displayed until the cached action expired.

Version 0.1.2 (2008-03-22)
  * Added MinifyController to minify JavaScript and CSS on the fly.
  * Bumped Ramaze dependency to 0.3.9.1 to chase some important bug fixes.
